# lart-runtime

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: project_settings.cmake
include/detail/: generator.hpp
include/lart/: choose.hpp  interface.hpp  shadow.hpp  stash.hpp  taint.hpp
scripts/hooks/: README.md  pre-commit-clang-format
scripts/travis/: clang-format.sh  install-cmake.sh
src/: choose.cpp  shadow.cpp  stash.cpp  taint.cpp  utils.hpp
test/: CMakeLists.txt  shadow.cpp  stash.cpp  taint.cpp
